# fuelmind

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  fuelmind-nas.bat  fuelmind-nas.ps1  fuelmind-start.bat  fuelmind-stop.bat  fuelmind.sh  install-fuelmind-command.sh  publish-screenshots.ps1  publish-to-git.ps1  setup-git-repo-structure.ps1  setup-nas-docker-sudo.ps1  setup-nas-ssh-key.ps1  sync-to-nas.ps1
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes_alerts.py  routes_analytics.py  routes_favorites.py  routes_health.py  routes_locations.py  routes_prediction.py  routes_prices.py  routes_settings.py  routes_stations.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: models.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial.py
backend/app/scheduler/: jobs.py  scheduler.py
backend/app/schemas/: alert_schema.py  analytics_schema.py  location_schema.py  price_schema.py  station_schema.py
backend/app/services/: alert_service.py  analytics_service.py  geocoding_service.py  prediction_service.py  price_service.py  station_service.py  tankerkoenig_client.py
backend/tests/: conftest.py  test_alert_service.py  test_health.py  test_price_service.py  test_tankerkoenig_client.py
docs/: GITHUB_SETUP.md  SCREENSHOTS.md  api.md  architecture.md  data_model.md  roadmap.md
frontend/: Dockerfile  entrypoint.sh  index.html  package.json
scripts/: example_requests.http  import_historical_prices.py  (+1 more)
(+20 files in other folders)
